--- a/css/style.css
+++ b/css/style.css
@@ -19,27 +19,26 @@ body {
     --color: #7000ff;
     --size: 17px;
 
+    --padding: 12px 3rem;
+
     --header-size: 68px;
 }
 
-header {
+.header {
     position: relative;
     z-index: 1;
 
     display: flex;
-    gap: 100px;
-    justify-content: space-between;
     align-items: center;
 
-    padding: 0 24px;
 
     min-height: var(--header-size);
 }
 
 .header__menu {
     display: inline-flex;
-    gap: 60px;
-    
+    gap: 100px;
+
     font-size: 20px;
 }
 
@@ -47,7 +46,7 @@ header {
     display: flex;
     align-items: center;
     flex: 1 1;
-    
+
     margin-top: calc(var(--header-size) * -1);
     padding: var(--header-size) 24px 24px;
 
@@ -87,10 +86,11 @@ button {
     align-items: center;
     justify-content: center;
 
-    min-width: 150px;
-    min-height: 40px;
+    /* min-width: 150px;
+    min-height: 40px; */
 
-    padding: 10px;
+    padding: var(--padding);
+
 
     font-size: 25px;
     color: white;
@@ -100,6 +100,10 @@ button {
     background-color: #7000ff;
     border: 2px solid var(--color);
 }
+
+/* .header_right {
+    padding-right: 20px;
+} */
 
 .button.--light {
     color: currentColor;
@@ -132,12 +136,13 @@ button {
 }
 
 .logo {
+    display: flex;
     font-size: 30px;
     font-weight: 700;
 }
 
 .logo span:first-child {
-    color:var(--color);
+    color: var(--color);
 }
 
 .title {
@@ -149,16 +154,24 @@ button {
 }
 
 a {
-    margin-left: 110px;
     color: black;
 
     text-decoration: none;
 }
 
-.logo, .header__menu, .header_right, .main__left  {
+.header .container {
+    display: flex;
+    gap: 100px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+.container {
     max-width: 1440px;
     width: 100%;
 
     margin: 0 auto;
     padding: 0 24px;
+    /* background-color: red; */
 }
