--- a/css/tabs.css
+++ b/css/tabs.css
@@ -15,13 +15,14 @@
     flex: 1;
 }
 
-.tab:has(.tab-actor:checked) + .tab.panel {
+.tab:has(.tab-actor:checked) + .tab-panel {
     display: initial;
 }
 
-@media screen and (max-width: 480pxa) {
-    :is(.tab, .tab-panel)
+@media screen and (max-width: 480px) {
+    :is(.tab, .tab-panel) {
     order: initial;
+}
 
     .tabs {
         flex-direction: column;
