--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,38 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+@import url(./tabs.css);
+
+.tabs {
+    gap: 0.75rem 0;
+}
+
+.tab {
+    padding: 8px 16px;
+    border-radius: 8px;
+    font-weight: bold;
+    background-color: ;
+}
+
+.tab:has(.tab-actor:checked) {
+    background-color: rgb(0, 162, 255);
+    color: white;
+}
+
+@media screen and (max-width: 480px) {
+    .tabs {
+        gap: 0;
+    }
+
+    .tab-panel {
+        display: block;
+        flex: 0;
+        max-width: 100%;
+        overflow-y: auto;
+        transition: 300ms flex;
+    }
+
+    .tab:has(.tab-actor:checked)+.tab-panel {
+        flex: 1;
+    }
+
+}
