--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
 
     --padding: 12px 3rem;
 
-    --header-size: 68px;
+    --header-size: 110px;
 }
 
 .header {
@@ -37,7 +37,7 @@ body {
 
 .header__menu {
     display: inline-flex;
-    gap: 100px;
+    gap: 60px;
 
     font-size: 20px;
 }
@@ -58,26 +58,29 @@ body {
 
 .aside {
     position: absolute;
-    inset: 0 0 0 60%;
+    inset: 0 0 0 50%;
 
     max-height: 100%;
     overflow: hidden;
 }
 
 .aside img {
-    /* object-fit: cover;
-    object-position: top right; */
+    object-position: top right;
 
-    width: 100%;
-    /* height: auto; */
+    width: auto;
+    height: 100%;
 }
 
 .title {
-    font-size: 40px;
+    font-size: 55px;
+    line-height: 113.5%;
+    margin-bottom: 8px;
 }
 
 .text {
-    font-size: 30px;
+    font-size: 24px;
+    line-height: 152%;
+    margin-bottom: 60px;
 }
 
 
@@ -101,6 +104,11 @@ button {
     border: 2px solid var(--color);
 }
 
+.buttons {
+    display: flex;
+    gap: 40px;
+}
+
 /* .header_right {
     padding-right: 20px;
 } */
@@ -108,10 +116,6 @@ button {
 .button.--light {
     color: currentColor;
     background-color: transparent;
-}
-
-.buttons {
-    margin-top: 15px;
 }
 
 .button.--line {
@@ -132,7 +136,6 @@ button {
     border: 2px solid var(--color);
     background-color: white;
     color: black;
-    margin-left: 50px;
 }
 
 .logo {
@@ -145,18 +148,13 @@ button {
     color: var(--color);
 }
 
-.title {
-    line-height: 42px;
-}
-
-.text {
-    line-height: 32px;
-}
 
 a {
     color: black;
-
     text-decoration: none;
+}
+a:first-child {
+    color: var(--color);
 }
 
 .header .container {
