--- a/css/style.css
+++ b/css/style.css
@@ -13,15 +13,16 @@
 body {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
 
     min-width: 100vw;
-
-    /* min-height: 100vh; */
+    min-height: 100vh;
 }
 
 .grid-container {
     display: grid;
+    grid-template-rows: max-content 1fr;
+    grid-template-columns: 24vw 1fr;
     grid-template-areas: "sidebar header" "sidebar main";
 }
 
@@ -37,7 +38,7 @@ body {
     min-height: 20%;
 
     padding: 10px;
-    background: purple;
+    /* background: purple; */
 }
 
 .header__list {
@@ -64,9 +65,12 @@ body {
 
 .list-btn span {
     display: block;
+    transform: translateY(5px);
 
     width: 30px;
     height: 5px;
+
+    border-radius: 10px;
 
     background-color: black;
     margin-bottom: 5px;
@@ -75,9 +79,32 @@ body {
 
 
 .search-input {
-    width: 100vh;
+    width: 130vh;
     height: 5vh;
-    padding: 20px 10px;
+    padding: 20px 40px;
+
+    border-radius: 10px;
+}
+
+.search {
+    padding: 0;
+    border: none;
+    font: inherit;
+    color: inherit;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.bx-search {
+    text-align: center;
+    position: absolute;
+    z-index: 1;
+
+    opacity: 0.6;
+
+    font-size: 30px;
+    margin-left: 10px;
+    transform: translateY(-18px);
 }
 
 .logo {
@@ -91,20 +118,28 @@ body {
     display: flex;
     flex-direction: column;
     grid-area: sidebar;
-    background-color: red;
+    /* background-color: red; */
+    /* border-right: 2px solid #999; */
+    position: relative;
 
     font-family: 'Varela Round';
 
-
     height: 100vh;
     width: 20vw;
+}
+
+.aside::before {
+    content: "";
+    position: absolute;
+    inset: 55px 0 35px auto;
+    border-right: 2px solid #99999941
 }
 
 .aside__top {
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 2px solid black;
+    /* border: 2px solid black; */
 
     gap: 30px;
 
@@ -140,47 +175,57 @@ body {
     height: 100%;
 
     gap: 65px;
-    border: 2px solid yellow;
+    /* border: 2px solid yellow; */
 }
+
 
 .aside__link {
     display: flex;
     justify-content: center;
     align-items: center;
 
+
     text-decoration: none;
-    color: #8f8f8f;
+    color: #999;
+    
 
     font-size: 26px;
-}
-
-.aside__link a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
     position: relative;
 }
 
 .aside__link i {
     position: absolute;
-    width: 190px;
+    width: 200px;
 }
 
 .aside__line {
-    border: 1px solid #8f8f8f;
+    border: 1px solid #999999ce;
     width: 80%;
 }
 
 .--is-active {
     color: #4170f4;
+    position: relative;
+}
+
+.--is-active::before {
+    content: "";
+    position: absolute;
+
+    aspect-ratio: 1;
+
+    width: 5px;
+    background-color: #4170f4;
+    border-radius: 50%;
+
+    inset: auto 50px auto 0;
+    transform: translate(-60px);
 }
 
 .main {
     grid-area: main;
-    height: max-content;
-    border: 5px solid aqua;
-    background: green;
+    /* border: 5px solid aqua; */
+    /* background: green; */
 }
 
 .topics {
@@ -192,7 +237,7 @@ body {
     display: flex;
     align-items: center;
     gap: 10px;
-    margin: 10px 0 3% 5%;
+    margin: 40px 0 3% 0;
     font-size: 35px;
 }
 
@@ -211,15 +256,20 @@ body {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    margin: 0 20px 0 0;
+    gap: 70px;
 }
 
 .populad-card {
+    display: flex;
+    flex-direction: column;
+    flex: 1 1;
+
     background-color: #c0dfff;
-    width: 350px;
-    height: 300px;
+    /* width: 420px;
+    height: 300px; */
 
     border-radius: 5%;
-
     padding: 58px 0;
 }
 
@@ -229,9 +279,10 @@ body {
     justify-content: center;
     font-size: 68px;
 
-    
+
     margin-bottom: 10px;
 }
+
 .populad-card div {
     display: flex;
     align-items: center;
@@ -239,6 +290,7 @@ body {
 
     font-size: 24px;
 }
+
 .populad-card p {
     display: flex;
     align-items: center;
@@ -259,9 +311,10 @@ body {
     display: flex;
     align-items: center;
     gap: 10px;
-    margin: 3% 0 3% 5%;
+    margin: 3% 0 3% 0;
     font-size: 35px;
 }
+
 .bx-calendar-alt {
     display: flex;
     justify-content: center;
@@ -277,21 +330,113 @@ body {
 
 .table__activity {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    margin-left: 80px;
 
+
+    /* width: 100%; */
+    position: relative;
+}
+
+thead {
+    color: #666;
+    font-size: 30px;
+    height: 50px;
+}
+
+thead>tr>td:first-child {
+    padding-right: 250px;
+}
+
+thead>tr>td:nth-child(2) {
+    padding-right: 330px;
+}
+
+thead>tr>td:nth-child(3) {
+    padding-right: 170px;
+}
+
+thead>tr>td:nth-child(4) {
+    padding-right: 120px;
 }
 
 tbody {
-    margin-right: 50px;
-  }
-  
-  tbody > tr > td:last-of-type {
+    margin-top: 20px;
+    font-size: 24px;
+    color: #999;
+}
+
+tbody>tr>td {
+    padding-bottom: 24px;
+}
+
+tbody>tr>tr:last-of-type {
     text-align: center;
-  }
-  
-  thead {
-    border-bottom: 2px solid rgb(160 160 160);
-    background-color: #2c5e77;
-    color: #fff;
-  }
+}
+
+tbody>tr:first-child>td:nth-child(2) {
+    padding-left: 170px;
+}
+
+tbody>tr:nth-child(2)>td:nth-child(2) {
+    padding-left: 170px;
+}
+
+tbody>tr:nth-child(3)>td:nth-child(2) {
+    padding-left: 170px;
+}
+
+tbody>tr:nth-child(4)>td:nth-child(2) {
+    padding-left: 170px;
+}
+
+/* _______________________________ */
+tbody>tr:first-child>td:nth-child(3) {
+    padding-left: 120px;
+}
+
+tbody>tr:nth-child(2)>td:nth-child(3) {
+    padding-left: 120px;
+}
+
+tbody>tr:nth-child(3)>td:nth-child(3) {
+    padding-left: 120px;
+}
+
+tbody>tr:nth-child(4)>td:nth-child(3) {
+    padding-left: 120px;
+}
+
+/* ----------------- */
+tbody>tr:first-child>td:nth-child(4) {
+    padding-left: 150px;
+}
+
+tbody>tr:nth-child(2)>td:nth-child(4) {
+    padding-left: 150px;
+}
+
+tbody>tr:nth-child(3)>td:nth-child(4) {
+    padding-left: 150px;
+}
+
+tbody>tr:nth-child(4)>td:nth-child(4) {
+    padding-left: 150px;
+}
+
+/* --------------------- */
+tbody>tr:first-child>td:nth-child(5) {
+    padding-left: 100px;
+}
+
+tbody>tr:nth-child(2)>td:nth-child(5) {
+    padding-left: 100px;
+}
+
+tbody>tr:nth-child(3)>td:nth-child(5) {
+    padding-left: 100px;
+}
+
+tbody>tr:nth-child(4)>td:nth-child(5) {
+    padding-left: 100px;
+}
