--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body {
 
     min-width: 100vw;
     min-height: 100vh;
+    overflow: hidden;
 }
 
 .grid-container {
@@ -79,7 +80,7 @@ body {
 
 
 .search-input {
-    width: 130vh;
+    width: 100vh;
     height: 5vh;
     padding: 20px 40px;
 
