--- a/css/style.css
+++ b/css/style.css
@@ -1,443 +1,108 @@
 @import url('https://fonts.googleapis.com/css2?family=Madimi+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 
-@import url(./keyframes.css);
 
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
     font-family: 'Madimi One';
 }
 
+:root {
+    --body-bg: #123;
+    --nav-bg: rgb(69, 92, 115);
+}
+
 body {
-    display: flex;
-    justify-content: center;
-    align-items: stretch;
-
-    min-width: 100vw;
-    min-height: 100vh;
-    overflow: hidden;
-}
-
-.grid-container {
     display: grid;
-    grid-template-rows: max-content 1fr;
-    grid-template-columns: 24vw 1fr;
-    grid-template-areas: "sidebar header" "sidebar main";
+    grid-template-columns: 20rem 1fr;
+    gap: 4rem;
+
+    background-color: var(--body-bg);
+    color: white;
+    font-size: 1.25rem;
+
+    min-height: 200vh;
+    margin: 0;
 }
 
-.header {
-    display: flex;
-    grid-area: header;
-
-    justify-content: center;
-    align-items: center;
-
-    gap: 30px;
-
-    min-height: 20%;
-
-    padding: 10px;
-    /* background: purple; */
+nav {
+    position: sticky;
+    top: 0;
+    max-height: 100svh;
+    background-color: var(--nav-bg);
 }
 
-.header__list {
-    display: flex;
-    align-items: center;
-
-    a {
-        font-size: 50px;
-        color: black;
-    }
-}
-
-.list-btn {
-    display: flex;
-    flex-direction: column;
-
+.nav-list {
+    margin: 0;
     padding: 0;
-    border: none;
-    font: inherit;
-    color: inherit;
-    background-color: transparent;
-    cursor: pointer;
+    list-style: none;
+
+    display: grid;
+    gap: 2rem;
+
+    padding-block: 2rem;
+    font-size: 2rem;
 }
 
-.list-btn span {
+.nav-list li {
+    padding: 1rem 2rem;
+    margin-left: 2rem;
+
+    border-radius: 100vw 0 0 100vw;
+}
+
+.nav-list li.active {
+    view-transition-name: activeNavTab;
+    background: var(--body-bg);
+    position: relative;
+}
+
+.nav-list li:nth-child(1) a {
+    view-transition-name: navLink-1;
+}
+
+.nav-list li:nth-child(2) a {
+    view-transition-name: navLink-2;
+}
+
+.nav-list li:nth-child(3) a {
+    view-transition-name: navLink-3;
+}
+
+::view-transition-group(activeNavTab) {
+    animation-duration: 500ms;
+    animation-timing-function: ease-in-out;
+}
+
+.nav-list li.active::before,
+.nav-list li.active::after {
+    --border-radius: 2rem;
+
+
+    content: '';
+    position: absolute;
+    width: var(--border-radius);
+    height: var(--border-radius);
+    right: 0;
+    background: var(--nav-bg);
+
+}
+
+.nav-list li.active::before {
+    top: calc(var(--border-radius) * -1);
+    border-radius: 0 0 100vw 0;
+    box-shadow: 10px 10px 0 10px var(--body-bg);
+}
+
+.nav-list li.active::after {
+    bottom: calc(var(--border-radius) * -1);
+    border-radius: 0 100vw 0 0;
+    box-shadow: 10px -10px 0 10px var(--body-bg);
+}
+
+.nav-list a {
     display: block;
-    transform: translateY(5px);
-
-    width: 30px;
-    height: 5px;
-
-    border-radius: 10px;
-
-    background-color: black;
-    margin-bottom: 5px;
-    position: relative;
-}
-
-
-.search-input {
-    width: 100vh;
-    height: 5vh;
-    padding: 20px 40px;
-
-    border-radius: 10px;
-}
-
-.search {
-    padding: 0;
-    border: none;
-    font: inherit;
-    color: inherit;
-    background-color: transparent;
-    cursor: pointer;
-}
-
-.bx-search {
-    text-align: center;
-    position: absolute;
-    z-index: 1;
-
-    opacity: 0.6;
-
-    font-size: 30px;
-    margin-left: 10px;
-    transform: translateY(-18px);
-}
-
-.logo {
-    display: flex;
-    justify-content: center;
-    width: 3%;
-    border-radius: 50%;
-}
-
-.aside {
-    display: flex;
-    flex-direction: column;
-    grid-area: sidebar;
-    /* background-color: red; */
-    /* border-right: 2px solid #999; */
-    position: relative;
-
-    font-family: 'Varela Round';
-
-    height: 100vh;
-    width: 20vw;
-}
-
-.aside::before {
-    content: "";
-    position: absolute;
-    inset: 55px 0 35px auto;
-    border-right: 2px solid #99999941
-}
-
-.aside__top {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* border: 2px solid black; */
-
-    gap: 30px;
-
-    height: 10%;
-    width: 100%;
-}
-
-.company__logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    background-color: aqua;
-    width: 60px;
-    height: 60px;
-
-    font-size: 24px;
-    font-weight: 600;
-
-    border-radius: 50%;
-}
-
-.compamy__text {
-    font-size: 30px;
-}
-
-.aside__content {
-    display: flex;
-    flex-direction: column;
-
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-
-    gap: 65px;
-    /* border: 2px solid yellow; */
-}
-
-
-.aside__link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-
+    color: white;
     text-decoration: none;
-    color: #999;
-    
-
-    font-size: 26px;
     position: relative;
-}
-
-.aside__link i {
-    position: absolute;
-    width: 200px;
-}
-
-.aside__line {
-    border: 1px solid #999999ce;
-    width: 80%;
-}
-
-.--is-active {
-    color: #4170f4;
-    position: relative;
-}
-
-.--is-active::before {
-    content: "";
-    position: absolute;
-
-    aspect-ratio: 1;
-
-    width: 5px;
-    background-color: #4170f4;
-    border-radius: 50%;
-
-    inset: auto 50px auto 0;
-    transform: translate(-60px);
-}
-
-.main {
-    grid-area: main;
-    /* border: 5px solid aqua; */
-    /* background: green; */
-}
-
-.topics {
-    display: flex;
-    flex-direction: column;
-}
-
-.topics__top {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    margin: 40px 0 3% 0;
-    font-size: 35px;
-}
-
-.bx-time-five {
-    display: flex;
-
-    color: white;
-    background-color: #4170f4;
-    width: 35px;
-    height: 35px;
-    border-radius: 25%;
-    font-size: 35px;
-}
-
-.topics__list {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin: 0 20px 0 0;
-    gap: 70px;
-}
-
-.populad-card {
-    display: flex;
-    flex-direction: column;
-    flex: 1 1;
-
-    background-color: #c0dfff;
-    /* width: 420px;
-    height: 300px; */
-
-    border-radius: 5%;
-    padding: 58px 0;
-}
-
-.populad-card i {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 68px;
-
-
-    margin-bottom: 10px;
-}
-
-.populad-card div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    font-size: 24px;
-}
-
-.populad-card p {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    font-size: 48px;
-}
-
-.populad-card.--yellow {
-    background: #fff3d7;
-}
-
-.populad-card.--fiolet {
-    background-color: #f0e1fd;
-}
-
-.section-caption {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    margin: 3% 0 3% 0;
-    font-size: 35px;
-}
-
-.bx-calendar-alt {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    color: white;
-    background-color: #4170f4;
-    width: 35px;
-    height: 35px;
-    border-radius: 25%;
-    font-size: 35px;
-}
-
-.table__activity {
-    display: flex;
-    flex-direction: column;
-    margin-left: 80px;
-
-
-    /* width: 100%; */
-    position: relative;
-}
-
-thead {
-    color: #666;
-    font-size: 30px;
-    height: 50px;
-}
-
-thead>tr>td:first-child {
-    padding-right: 250px;
-}
-
-thead>tr>td:nth-child(2) {
-    padding-right: 330px;
-}
-
-thead>tr>td:nth-child(3) {
-    padding-right: 170px;
-}
-
-thead>tr>td:nth-child(4) {
-    padding-right: 120px;
-}
-
-tbody {
-    margin-top: 20px;
-    font-size: 24px;
-    color: #999;
-}
-
-tbody>tr>td {
-    padding-bottom: 24px;
-}
-
-tbody>tr>tr:last-of-type {
-    text-align: center;
-}
-
-tbody>tr:first-child>td:nth-child(2) {
-    padding-left: 170px;
-}
-
-tbody>tr:nth-child(2)>td:nth-child(2) {
-    padding-left: 170px;
-}
-
-tbody>tr:nth-child(3)>td:nth-child(2) {
-    padding-left: 170px;
-}
-
-tbody>tr:nth-child(4)>td:nth-child(2) {
-    padding-left: 170px;
-}
-
-/* _______________________________ */
-tbody>tr:first-child>td:nth-child(3) {
-    padding-left: 120px;
-}
-
-tbody>tr:nth-child(2)>td:nth-child(3) {
-    padding-left: 120px;
-}
-
-tbody>tr:nth-child(3)>td:nth-child(3) {
-    padding-left: 120px;
-}
-
-tbody>tr:nth-child(4)>td:nth-child(3) {
-    padding-left: 120px;
-}
-
-/* ----------------- */
-tbody>tr:first-child>td:nth-child(4) {
-    padding-left: 150px;
-}
-
-tbody>tr:nth-child(2)>td:nth-child(4) {
-    padding-left: 150px;
-}
-
-tbody>tr:nth-child(3)>td:nth-child(4) {
-    padding-left: 150px;
-}
-
-tbody>tr:nth-child(4)>td:nth-child(4) {
-    padding-left: 150px;
-}
-
-/* --------------------- */
-tbody>tr:first-child>td:nth-child(5) {
-    padding-left: 100px;
-}
-
-tbody>tr:nth-child(2)>td:nth-child(5) {
-    padding-left: 100px;
-}
-
-tbody>tr:nth-child(3)>td:nth-child(5) {
-    padding-left: 100px;
-}
-
-tbody>tr:nth-child(4)>td:nth-child(5) {
-    padding-left: 100px;
+    z-index: 10;
 }
