--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Madimi+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-@import url(./switchers.css);
-
 * {
     box-sizing: border-box;
     font-family: 'Madimi One';
@@ -42,6 +40,8 @@ nav {
 
     padding-block: 2rem;
     font-size: 2rem;
+
+    z-index: 20;
 }
 
 .nav-list li {
@@ -108,7 +108,7 @@ nav {
     z-index: 10;
 }
 
-.pictures {
+.avatars {
     --avatar-count: 10;
     --avatar-size: 70px;
     --column-size: calc(var(--avatar-size) / 2);
@@ -124,13 +124,13 @@ nav {
     transition-delay: var(--transition-duration);
 }
 
-.pictures:hover,
-.pictures:focus-within {
+.avatars:hover,
+.avatars:focus-within {
     --column-size: calc(var(--avatar-size) * 1.5);
     transition-delay: 0ms;
 }
 
-.picture {
+.avatar {
     width: var(--avatar-size);
 
     aspect-ratio: 1;
@@ -143,9 +143,14 @@ nav {
     transition: scale var(--transition-duration);
 }
 
+.avatar:hover+.avatar,
+.avatar:has(+ .avatar:hover) {
+    scale: 1.5;
+}
 
-.picture:hover,
-.picture:focus {
+
+.avatar:hover,
+.avatar:focus {
     scale: 2;
     z-index: 2;
 }
