--- a/css/switchers.css
+++ b/css/switchers.css
@@ -85,3 +85,122 @@
         content: '\2713';
     }
    }
+
+   body {
+    overflow: hidden;
+   }
+
+   section {
+    position: absolute;
+    height: 100vh;
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   }
+
+   section::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 50%;
+    bottom: 0;
+    z-index: 1;
+    backdrop-filter: blur(5px);
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+   }
+
+   section .color {
+    position: absolute; 
+    filter: blur(150px);
+   }
+
+   section .color:nth-child(1) {
+    background: #ff359b;
+    width: 500px;
+    height: 500px;
+    bottom: -150px;
+   }
+
+   section .color:nth-child(2) {
+    background: #00d2ff;
+    width: 500px;
+    height: 500px;
+    bottom: -150px;
+    left: 100px;
+   }
+
+   section .color:nth-child(3) {
+    background: #fffd87;
+    width: 300px;
+    height: 300px;
+    bottom: 50px;
+    left: 100px;
+   }
+
+   .list-link {
+    position: relative;
+
+    display: flex;
+    z-index: 2;
+   }
+
+   .list-link .li__list-link {
+    position: relative;
+
+    list-style: none;
+
+    margin: 10px;
+   }
+
+   .list-link .li__list-link a {
+    position: relative;
+
+    width: 80px;
+    height: 80px;
+
+    display: inline-block;
+    border-radius: 10px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    text-decoration: none;
+    color: #fff;
+    font-size: 2em;
+
+    border: 1px solid rgba(255, 255, 255, 0.4);
+    border-right: 1px solid rgba(255, 255, 255, 0.2);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+
+    box-shadow: 0 5px 45px rgba(0, 0, 0, 0.1);
+
+    backdrop-filter: blur(2px);
+    transition: 0.5s;
+    overflow: hidden;
+   }
+
+   .list-link .li__list-link a:hover{
+    transform: translateY(-20px);
+   }
+
+   .list-link .li__list-link a::before {
+    content: '';
+    position: absolute;
+
+    top: 0;
+    left: 0;
+    width: 50px;
+    height: 100%;
+
+    background: rgba(255, 255, 255, 0.5);
+    transform: skewX(45deg) translateX(150px);
+    transition-duration: 0.5s;
+   }
+
+   .list-link .li__list-link a:hover::before {
+    transition: transform 700ms ease-in-out;
+    transform: skewX(45deg) translateX(-150px);
+   }
